decimate modifier bug on uv-coordinates when mesh uses vertex color #33797

Closed
opened 2013-01-07 15:30:48 +01:00 by Anaël Seghezzi · 6 comments

%%%--- Operating System, Graphics card ---
Mac book pro with OSX 10.6.8

- Blender version with error, and version that worked ---

Blender 2.65a OSX 64bits

- Short description of error ---

The decimator modifier introduce erros in uv-coordinates if the mesh uses vertex color.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Decimate a mesh with uv-coordinates and vertex color, the texture coordinates are destroyed on some parts,
after removing the vertex color, the bug disappear.

Thank you,

Anaël.

%%%

%%%--- Operating System, Graphics card --- Mac book pro with OSX 10.6.8 - Blender version with error, and version that worked --- Blender 2.65a OSX 64bits - Short description of error --- The decimator modifier introduce erros in uv-coordinates if the mesh uses vertex color. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Decimate a mesh with uv-coordinates and vertex color, the texture coordinates are destroyed on some parts, after removing the vertex color, the bug disappear. Thank you, Anaël. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Could you upload a test file please?
I tried this with a UV-sphere and it works correctly.%%%

%%%Could you upload a test file please? I tried this with a UV-sphere and it works correctly.%%%

%%%I made a small example with suzanne in attachment :

  • enable the decimate modifier (hidden by default) > the uv will be broken, at least on my machine
  • delete the vertex color block in the object data > the bug disapear%%%
%%%I made a small example with suzanne in attachment : - enable the decimate modifier (hidden by default) > the uv will be broken, at least on my machine - delete the vertex color block in the object data > the bug disapear%%%

%%%confirmed, checking on it.%%%

%%%confirmed, checking on it.%%%

%%%fixed r53660.%%%

%%%fixed r53660.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33797
No description provided.