fix [#33797] decimate modifier bug on uv-coordinates when mesh uses vertex color

if vertex colors had no seams - it would interpolate the UV's too, now interpolate per-layer.